--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = bmya/odoo-argentina
 	url = git@github.com:bmya/odoo-argentina.git
 	branch = 10.0
+
+[submodule "bmya/account-financial-tools"]
+	path = bmya/account-financial-tools
+	url = git@github.com:bmya/account-financial-tools.git
+	branch = 10.0
