[ADD] submodule bmya/queue

--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,8 @@
 	path = ingadhoc-account-payment
 	url = git@github.com:bmya/account-payment.git
 	branch = 10.0
+
+[submodule "bmya/queue"]
+	path = bmya/queue
+	url = git@github.com:bmya/queue.git
+	branch = 10.0
