--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,8 @@
 	path = bmya/miscellaneous
 	url = git@github.com:bmya/miscellaneous.git
 	branch = 10.0
+
+[submodule "bmya/account-financial-tools"]
+	path = bmya/account-financial-tools
+	url = git@github.com:bmya/account-financial-tools.git
+	branch = 10.0
