[ADD] submodule bmya/account-payment

--- a/.gitmodules
+++ b/.gitmodules
@@ -87,3 +87,8 @@
 	path = bmya/oca-account-payment
 	url = git@github.com:bmya/oca-account-payment.git
 	branch = 10.0
+
+[submodule "bmya/account-payment"]
+	path = bmya/account-payment
+	url = git@github.com:bmya/account-payment.git
+	branch = 10.0
